<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一加一蓝牙测试</string>
    <string name="title_devices">Lock List</string>
    <string name="empty_scan_list">No devices found</string>
    <!-- Dialog strings -->
    <string name="dialog_error_no_ble">Bluetooth Low Energy technology is not supported on your device.</string>
    <string name="dialog_error_no_bluetooth">Bluetooth is not supported on your device.</string>
    <string name="dialog_enable_bluetooth">Please turn on Bluetooth to scan for SensorTag devices around you.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on">Turn on</string>
	<string name="setting">Setting</string>
	<!-- time function -->
	<string name="time_function">Time function</string>
	<string name="time_function_add">Add time function</string>	
	<string name="time_function_modify">Edit time function</string>	
	<string name="title_time_time">Time</string>				
	<string name="title_repeat">Repeat</string>	
	<string name="time_time">Time :</string>				
	<string name="repeat">Repeat:</string>			
	<string name="power_switch">Power switch :</string>		
	<string name="power_on">On</string>
	<string name="power_off">Off</string>			
	<string name="color_temperature">Color Temp:</string>		
	<string name="color_warm">Warm</string>
	<string name="color_cool">Cool</string>
	<string name="light_brightness">Brightness:</string>		
	
	<string name="am">AM</string>
	<string name="pm">PM</string>
	<string name="sunday">Sun</string>
	<string name="monday">Mon</string>
	<string name="tuesday">Tue</string>
	<string name="wednesday">Wed</string>
	<string name="thursday">Thu</string>
	<string name="friday">Fri</string>
	<string name="saturday">Sat</string>
	<string name="workday">Workday</string>
	<string name="week_end">Weekend</string>
	<string name="week_all">Each day</string>
	<string name="once">Each time</string>	
	<string name="button_save">Save</string>
	<string name="button_cancel">Cancel</string> 
	<string name="button_confirm">OK</string>
	<string name="button_delete">Delete</string>
	<string name="button_rename">Rename</string>
	<string name="button_edit">Edit</string>    
	<string name="time_function_add_success">Successfully add time function!</string>	
	<string name="time_function_add_failth">Failure to add time function, please try again!</string>	
	<string name="time_function_modify_success">Successfully edit time function!</string>	
	<string name="time_function_modify_failth">Failure to edit time function, please try again!</string>	
	<string name="open_light_failth">Failture to open light,please try again!</string>	
	<string name="close_light_failth">Failture to close light,please try again!</string>
	<string name="change_light_brightness_failth">Failture to adjust light brightness,please try again!</string>
	<string name="change_color_temperature_failth">Failture to switch color temperature,please try again!</string>
	<string name="set_device_time_success">Successfully set device time!</string>
	<string name="set_device_time_falith">Failture to set device time,please try again!</string>	
	<string name="delete_confirm_text">Sure to delete%1$s?</string>	
	<string name="change_name_success">Successfully rename!</string>
	<string name="name_error_empty">The device name can not empty!Please input again!</string>
	<string name="name_error_too_long">The length of device name is to long!Please input again!</string>
	<string name="change_name_failth">Failture to rename,please try again!</string>
	<string name="delete_success">Delete successfully!</string>	
	<string name="delete_failth">Failture to delete,please try again!</string>	
	
	<string name="setting_device_time">Device Time</string>
	<string name="setting_check_version">Check version</string>
	<string name="setting_current_version">Current version:</string>
	<string name="setting_buy_light">UMOO Store</string>
	<string name="setting_contact_us">Contact us</string>
	<string name="setting_about_us">About us</string>
	
	<string name="datetime_year">Y</string>
	<string name="datetime_month">M</string>
	<string name="datetime_day">D</string>
	<string name="datetime_hour">H</string>
	<string name="datetime_minute">Min</string>
	<string name="toast_title">Prompt message</string>	
	<string name="use_system_time">Use system time</string>
	<string name="popupwindow_title">Toast Message</string>
	<string name="device_offline">The current device has been disconnected. Please reconnect！</string>
    <string name="contact_us_wechat_info">欢迎前往微信关注有木创意公众号:umoohome</string>
    <!-- Unknown values -->
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    
	<string name="connect_device_wait">Connecting the device,please wait&#8230;</string>
    <string name="connect_device_error">Failture to connect the device,please confirm the led of connecting is flickering and try again!</string>
    <string name="progress_wait">Please wait&#8230;</string>
	<string name="device_offline_error">Failure to send the message, network send timeout or device has been offline!</string>
</resources>