<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_popupwindow"
        android:orientation="vertical" >

        <include layout="@layout/popupwindow_title_layout" />

        <!-- text -->

        <LinearLayout
            android:id="@+id/ll_popupwindow_text"
            android:layout_width="@dimen/popupwindow_big_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:minHeight="@dimen/popupwindow_min_height"
            android:orientation="vertical"
            android:paddingLeft="@dimen/system_margin_left"
            android:paddingRight="@dimen/system_margin_left"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_popupwindow_text"
                style="@style/global_system_text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left" />
        </LinearLayout>

        <!-- edittext -->

        <LinearLayout
            android:id="@+id/ll_popupwindow_edittext"
            android:layout_width="@dimen/popupwindow_larger_width"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:minHeight="@dimen/popupwindow_min_height"
            android:orientation="vertical"
            android:paddingLeft="@dimen/system_margin_left"
            android:paddingRight="@dimen/system_margin_left"
            android:visibility="gone" >

            <EditText
                android:id="@+id/edt_socket_name"
                style="@style/global_system_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/system_margin_left"
                android:layout_marginRight="@dimen/system_margin_left"
                android:background="@null"
                android:paddingLeft="5dp"
                android:textCursorDrawable="@drawable/edittext_cursor_bg" >

                <requestFocus />
            </EditText>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/system_margin_left"
                android:layout_marginRight="@dimen/system_margin_left"
                android:background="@drawable/text_input"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <!-- time picker -->

        <LinearLayout
            android:id="@+id/ll_popupwindow_time_picker"
            android:layout_width="@dimen/popupwindow_larger_width"
            android:layout_height="@dimen/popupwindow_time_picker_content_height"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <FrameLayout
                android:layout_width="@dimen/popupwindow_larger_width"
                android:layout_height="@dimen/popupwindow_time_picker_content_height"
                android:gravity="center" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/line"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/line"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <com.wheel.WheelView
                        android:id="@+id/hourwheel"
                        android:layout_width="@dimen/time_picker_item_width"
                        android:layout_height="@dimen/time_picker_item_height" />

                    <TextView
                        android:layout_width="@dimen/time_picker_margin"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=":"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/normal_text_size" >
                    </TextView>

                    <com.wheel.WheelView
                        android:id="@+id/minuteswheel"
                        android:layout_width="@dimen/time_picker_item_width"
                        android:layout_height="@dimen/time_picker_item_height" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        <!-- DateTime picker -->

        <LinearLayout
            android:id="@+id/ll_popupwindow_datetime_picker"
            android:layout_width="@dimen/popupwindow_larger_content_height"
            android:layout_height="@dimen/popupwindow_time_picker_content_height"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <FrameLayout
                android:layout_width="@dimen/popupwindow_larger_width"
                android:layout_height="@dimen/popupwindow_time_picker_content_height"
                android:gravity="center" >
				<CheckBox
                        android:id="@+id/cb_use_system_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="right"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="6dp"
                        android:text="@string/use_system_time"
                        android:button="@drawable/button_checkbox" />
				
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/line"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/line"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <com.wheel.WheelView
                        android:id="@+id/datetime_yearwheel"
                        android:layout_width="@dimen/datetime_picker_year_item_width"
                        android:layout_height="@dimen/time_picker_item_height" />

                    <com.wheel.WheelView
                        android:id="@+id/datetime_monthwheel"
                        android:layout_width="@dimen/datetime_picker_item_width"
                        android:layout_height="@dimen/time_picker_item_height" />

                    <com.wheel.WheelView
                        android:id="@+id/datetime_daywheel"
                        android:layout_width="@dimen/datetime_picker_item_width"
                        android:layout_height="@dimen/time_picker_item_height"
                        android:layout_marginRight="@dimen/datetime_picker_margin" />

                    <com.wheel.WheelView
                        android:id="@+id/datetime_hourwheel"
                        android:layout_width="@dimen/datetime_picker_item_width"
                        android:layout_height="@dimen/time_picker_item_height" />

                    <com.wheel.WheelView
                        android:id="@+id/datetime_minuteswheel"
                        android:layout_width="@dimen/datetime_picker_item_width"
                        android:layout_height="@dimen/time_picker_item_height" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <!-- List LinearLayout -->

        <LinearLayout
            android:id="@+id/ll_popupwindow_list"
            android:layout_width="@dimen/popupwindow_larger_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ListView
                android:id="@+id/lv_popupwindow"
                style="@style/popupwindow_list_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >
            </ListView>
        </LinearLayout>
        <!-- menu -->

        <LinearLayout
            android:id="@+id/ll_popupwindow_menu"
            android:layout_width="@dimen/popupwindow_big_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_menu_up"
                style="@style/global_system_text_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@drawable/button_menu_rename"
                android:text="@string/button_edit" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line"
                android:contentDescription="@string/app_name" />

            <Button
                android:id="@+id/btn_menu_down"
                style="@style/global_system_text_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:background="@drawable/button_menu_delete"
                android:text="@string/button_delete" />
        </LinearLayout>

        <include layout="@layout/popupwindow_button_layout" />

        <include layout="@layout/popupwindow_one_button_layout" />
    </LinearLayout>

</FrameLayout>